<?xml version="1.0"?>
<package format="3">
  <name>locomotion_viewer</name>
  <version>0.0.1</version>
  <description>identify trunk CoM position without stopping the execution of the current task</description>

  <maintainer email="hyq@advr.iit.it">HyQ Group</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rviz_visual_tools</depend>
  <depend>geometry_msgs</depend>
</package>
